Atlas Edit Weekly Cycle Proposal 2024-09-16 (#33)
* Atlas Edit Weekly Cycle Proposal 2024-09-16

* format

---------

Co-authored-by: Adam Fraser <adam.fraser@gmail.com>

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -549,8 +549,7 @@
           </td>
           <td>Accessibility Reward</td>
           <td>Article</td>
-          <td>This Article defines an Accessibility Reward System to incentivize third-party frontends and Stars
-            to attract USDS users, Savings Rate (SR) users, and Star users.</td>
+          <td>This Article defines an Accessibility Reward System to incentivize third-party frontends and Stars to attract USDS users, Sky Savings Rate (SSR) users, and Star users.</td>
         </tr>
         <tr>
           <td>
@@ -1615,6 +1614,15 @@
             considered serious misalignment. In the event of such breaches, the known identities of individuals
             holding these AC roles shall be promptly derecognized, and they will be barred from further
             participation as Alignment Conservers.</td>
+        </tr>
+        <tr>
+          <td><dfn>A.1.4 - Alignment Conservers - Powers And Constraints - Exemption From Facilitator Anonymity Requirement</dfn></td>
+          <td>Alignment Conservers - Powers And Constraints - Exemption From Facilitator Anonymity Requirement</td>
+          <td>Core</td>
+          <td>The Facilitator “Ecosystem” is exempt from the anonymity requirement, as well as the requirement of high levels of operational security insofar as the latter requirement relates to maintaining anonymity. This exemption applies solely to the Facilitator “Ecosystem”, as they onboarded into the role prior to the ratification of Atlas v1 (March 27, 2023), which introduced the anonymity requirement for Facilitators.
+          This exemption applies to limit the effect of the following provisions: <dfn>A.1.6 - Facilitators - Facilitator Operational Security - Facilitators Must Maintain High Level Of Operational Security 1</dfn>; <dfn>A.1.6 - Facilitators - Facilitator Operational Security - Derecognition Required Where Facilitator Operational Security Is Compromised</dfn>; <dfn>A.1.6 - Facilitators - Facilitator Operational Security - Facilitators Must Err On Side Of Caution</dfn>; and <dfn>A.0.1 - Atlas Preamble - Definitions - Facilitator</dfn>.
+          This limited exemption takes precedence over any conflicting provisions in the Atlas.
+          </td>
         </tr>
         <tr>
           <td>
@@ -2919,9 +2927,7 @@
           <td>Sky Core Governance Security - Governance Security Delay Requirements - Smart Burn Engine Breaker
             Exception</td>
           <td>Core</td>
-          <td>The FlapperMom contract allows for the disabling of the Smart Burn Engine without the GSM delay.This
-            functionality is available so that Sky Governance can react to emergencies regarding the Smart Burn
-            Engine.</td>
+          <td>The SplitterMom contract allows for the disabling of the Smart Burn Engine without the GSM delay. This functionality is available so that Sky Governance can react to emergencies regarding the Smart Burn Engine. Since the Splitter contract also allocates USDS from the Surplus Buffer to USDS Seal Rewards, the activation of SplitterMom also disables these rewards until the activation is reversed by Sky Governance.</td>
         </tr>
         <tr>
           <td>
@@ -8485,9 +8491,7 @@
           </td>
           <td>Core Tokens - USDS</td>
           <td>Section</td>
-          <td>USDS is the Stablecoin product of the Sky Protocol. It is designed to remain stable against USD, and
-            its supply is regulated through the Price Stability Mechanism and the Allocation System, as governed
-            by the Stability Scope.</td>
+          <td>USDS is the Stablecoin product of the Sky Protocol. It is designed to remain stable against USD, and its supply is regulated through the Peg Stability Module and the Allocation System, as governed by the Stability Scope.</td>
         </tr>
         <tr>
           <td>
@@ -10104,10 +10108,7 @@
           </td>
           <td>Delegated Voting Power - Element Annotation</td>
           <td>Annotation</td>
-          <td>The element "delegated voting power" refers to the ability of SKY holders and Sealed Activation
-            users to entrust their voting power to a Delegate Contract, allowing the Aligned Delegate
-            controlling that contract to cast votes in the Sky Governance process on their behalf. The SKY
-            holder or Sealed Activation user always maintains full ownership of their tokens.</td>
+          <td>The element “delegated voting power” refers to the ability of SKY holders and Sealing users to entrust their voting power to a Delegate Contract, allowing the Aligned Delegate controlling that contract to cast votes in the Sky Governance process on their behalf. The SKY holder or Sealing user always maintains full ownership of their tokens.</td>
         </tr>
         <tr>
           <td>
@@ -10698,8 +10699,7 @@
           </td>
           <td>Total Votes Delegated - Element Annotation</td>
           <td>Annotation</td>
-          <td>The element refers to the cumulative voting power that has been delegated to a Delegate Contract by
-            SKY holders and Sealed Activation users.</td>
+          <td>The element “total votes delegated” refers to the cumulative voting power that has been delegated to a Delegate Contract by SKY holders and Sealing users.</td>
         </tr>
         <tr>
           <td>
