add changes from recent executive votes (#34)

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2729,7 +2729,7 @@
           <td>Sky Core Governance Security - Governance Security Delay Requirements - Pause Delay Current Value
           </td>
           <td>Core</td>
-          <td>The GSM Pause Delay is: 30 hours</td>
+          <td>The GSM Pause Delay is: 16 hours</td>
         </tr>
         <tr>
           <td>
@@ -8481,8 +8481,7 @@
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Kill Switch Current Configuration</td>
           <td>Core</td>
-          <td>The kill switch currently covers the following assets with the specified thresholds:• WBTC/BTC -
-            0.95• STETH/ETH - 0.95</td>
+          <td>The kill switch currently covers the following assets with the specified thresholds:• STETH/ETH - 0.95</td>
         </tr>
         <tr>
           <td>
