Atlas Edit Weekly Cycle Proposal - 2024-10-21 (#41)
* Atlas Edit Weekly Cycle Proposal - 2024-10-21

* Applying suggestions from Lex

---------

Co-authored-by: VoteWizard <139255802+VoteWizard@users.noreply.github.com>

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8753,6 +8753,26 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.5.3
+              - Accessibility Reward - Integration Boost</dfn>
+          </td>
+          <td>Accessibility Reward - Integration Boost</td>
+          <td>Core</td>
+          <td>The Accessibility Facilitator can work with Ecosystem Actors to set up mechanisms that provide
+            additional rewards to DeFi lending protocols that integrate USDS. The rewards must be calculated
+            offchain to be equivalent to the USDS Savings Rate on their unutilized USDS, and must be delivered
+            through the native liquidity mining mechanisms of the lending protocols, or similar systems.<br> The
+            Integration Boost can also be delivered to other forms of DeFi protocols than Lending Protocols, as
+            long as there is a reasonable equivalence in how the integration boost helps grow USDS adoption.<br>
+            The Integration Boost is delivered through a multisig that the Accessibility Facilitator can request
+            to have topped up to 2 million USDS through Executive Votes whenever necessary to ensure the
+            Integration Boost is delivered successfully.<br> Since the Integration Boost is delivered with a lag,
+            for strategic integrations, the Accessibility Facilitator may choose to provide an extra high
+            Integration Boost, to encourage rapid adoption and prevent the Integration Boost value from getting
+            low during the early growth phase.</td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.5.4
               - A1 - Accessibility Communication Channels</dfn>
           </td>
@@ -9125,8 +9145,10 @@
           </td>
           <td>Launch Project - Sky on Solana Short Term Crosschain Strategy</td>
           <td>Core</td>
-          <td>The Accessibility Facilitators must work with Advisors and Ecosystem Actors to research and implement a decentralized crosschain solution using Wormhole that enables the bridging of USDS, sUSDS and SKY to Solana.
-          Once the crosschain solution is implemented, the Accessibility Facilitators must use SKY tokens from the Launch Project Budget to incentivize adoption of USDS, sUSDS and SKY within major DeFi protocols on Solana. Up to 2 million SKY per week can be utilized this way, and their use must be optimized over time based on where they are able to drive the most adoption of USDS, sUSDS and SKY.
+          <td>The Accessibility Facilitators must work with Advisors and Ecosystem Actors to research and
+            implement a decentralized crosschain solution using Wormhole that enables the bridging of USDS to
+            Solana.<br> Once the crosschain solution is implemented, the Accessibility Facilitators must use the
+            USDS integration boost system to encourage integration and adoption of USDS on Solana.
           </td>
         </tr>
         <tr>
